# keep-the-why

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  llms.txt  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml  link-check.yml  release.yml  validate-skill.yml
context/: README.md  compatibility.md  docs-engine.md  index.md  naming.md  repo-conventions.md  scope.md
dev/notes/: brainstorm-summary-for-chatgpt.md
docs/: CNAME  badge.md  continuous-capture.md  faq.html  faq.md  genindex.html  index.html  installation.html  installation.md  interview-playbook.md  llms.txt  methodology.md  migrations.md  objects.inv  overview.html  repository-structure.md  retrospective-analysis.md  robots.txt  search.html  searchindex.js  setup.md  why.md
docs/_sources/: installation.md.txt
docs/assets/: extra.css
docs/context/: compatibility.md  docs-engine.md  naming.md  repo-conventions.md  scope.md
docs/examples/: abandoned-change.md  continuous-development.html  continuous-development.md  developer-handover.html  developer-handover.md  first-time-setup.md  legacy-project.html  legacy-project.md
docs/references/: continuous-capture.html  interview-playbook.html  methodology.html  repository-structure.html  retrospective-analysis.html
evals/: evals.json
examples/: continuous-development.md  developer-handover.md  legacy-project.md
overrides/: main.html
references/: continuous-capture.md  interview-playbook.md  methodology.md  repository-structure.md
sphinx/: requirements.txt
(+27 files in other folders)
