[project]
name = "keep-the-why-docs"
version = "0.1.0"
description = "Docs build tooling for the Keep the Why agent skill."
requires-python = ">=3.10"

[project.optional-dependencies]
docs = [
    "sphinx>=7.3",
    "furo>=2024.1",
    "myst-parser>=3.0",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
